# stlsoft-snippets

./: CMakeLists.txt  README.txt
src/: stlsoft_main.cpp
